<resources>
    <string name="app_name">Calculadora SI</string>

    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>

    <string name="soma">+</string>
    <string name="subtracao">-</string>
    <string name="multiplicacao">X</string>
    <string name="divisao">÷</string>
    <string name="porcentagem">%</string>
    <string name="virgula">,</string>
    <string name="igual">=</string>

    <string name="reset">C</string>
    <string name="delete">D</string>
</resources>
