<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewUltimaExpressaoID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:gravity="end"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_view_ultima_expressao_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewResultadoID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="end"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="@dimen/text_view_result_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUltimaExpressaoID" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayoutBotoes"
        android:layout_width="400dp"
        android:layout_height="511dp"
        app:columnCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewResultadoID"
        app:rowCount="5"
        app:useDefaultMargins="true">

        <Button
            android:id="@+id/buttonResetID"
            style="@style/AppTheme.Other.Button"
            android:text="@string/reset" />

        <Button
            android:id="@+id/buttonDeleteID"
            style="@style/AppTheme.Other.Button"
            android:text="@string/delete" />

        <Button
            android:id="@+id/buttonPorcentoID"
            style="@style/AppTheme.Other.Button"
            android:text="@string/porcentagem" />

        <Button
            android:id="@+id/buttonDivisaoID"
            style="@style/ButtonOperacaoTheme"
            android:text="@string/divisao" />

        <Button
            android:id="@+id/buttonSeteID"
            style="@style/ButtonNumeroTheme"
            android:text="@string/num_7" />

        <Button
            android:id="@+id/buttonOitoID"
            style="@style/ButtonNumeroTheme"
            android:text="@string/num_8" />

        <Button
            android:id="@+id/buttonNoveID"
            style="@style/ButtonNumeroTheme"
            android:text="@string/num_9" />

        <Button
            android:id="@+id/buttonMultiplicacaoID"
            style="@style/ButtonOperacaoTheme"
            android:text="@string/multiplicacao" />

        <Button
            android:id="@+id/buttonQuatroID"
            style="@style/ButtonNumeroTheme"
            android:text="@string/num_4" />

        <Button
            android:id="@+id/buttonCincoID"
            style="@style/ButtonNumeroTheme"
            android:text="@string/num_5" />

        <Button
            android:id="@+id/buttonSeisID"
            style="@style/ButtonNumeroTheme"
            android:text="@string/num_6" />

        <Button
            android:id="@+id/buttonSubtracaoID"
            style="@style/ButtonOperacaoTheme"
            android:text="@string/subtracao" />

        <Button
            android:id="@+id/buttonUmID"
            style="@style/ButtonNumeroTheme"
            android:text="@string/num_1" />

        <Button
            android:id="@+id/buttonDoisID"
            style="@style/ButtonNumeroTheme"
            android:text="@string/num_2" />

        <Button
            android:id="@+id/buttonTresID"
            style="@style/ButtonNumeroTheme"
            android:text="@string/num_3" />

        <Button
            android:id="@+id/buttonSomaID"
            style="@style/ButtonOperacaoTheme"
            android:text="@string/soma" />

        <Button
            android:id="@+id/buttonZeroID"
            style="@style/ButtonNumeroTheme"
            android:text="@string/num_0" />

        <Button
            android:id="@+id/buttonVirgulaID"
            style="@style/ButtonNumeroTheme"
            android:text="@string/virgula" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonIgualID"
            style="@style/AppTheme.Equal.Button"
            android:text="@string/igual" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
